# HighPerformance

./: .gitignore  .gitmodules  requirements.txt
assignment_1/: assignment.md  fit_linear_trend_sendrecv.py  launch.json  pingPong.c  pingPong_MPI_SendRecv_version.c  pingpong_results_MPI_SendRecv_version.csv  pingpong_results_reversed-order_two-nodes.csv  run_SendRecv_version.sbatch
assignment_1/MM_product/: MM-product.cpp  mm_performance.csv  run.sbatch  run_scaling.sbatch
assignment_1/pingpong/: fit_linear_trend.py  fit_linear_trend_reversed.py  pingpong_results_MPI_SendRecv_version.csv  pingpong_results_MPI_SendRecv_version_two_nodes.csv  pingpong_results_reversed-order.csv  pingpong_results_send-receive.csv  pingpong_results_two_nodes.csv  run.sbatch
assignment_2/: CMakeLists.txt  CMakePresets.json  PAR_Poisson  PAR_Poisson.c  PAR_Poisson.cpp  SEQ_Poisson.c  analyze_sor_iteration_scaling.py  assignment_2.md  benchmark.sh  benchmark_cg_comparison.sh  benchmark_convergence.sh  benchmark_convergence_results.csv  benchmark_error_monitoring.sh  benchmark_exchange_analysis.sh  benchmark_exchange_time.sh  benchmark_loop_optimization.sh  benchmark_results.csv  benchmark_sweeps.sh  benchmark_topology.sh  benchmark_topology_results.csv  convergence_benchmark_table.tex  error_monitoring_table.tex  mptimers.c  plot_cg_comparison.py  plot_convergence_benchmark.py  plot_error_monitoring.py  plot_exchange_analysis.py  plot_exchange_time.py  plot_sweeps_benchmark.py  plot_topology_benchmark.py  run.sbatch  seq_pois  setup_env.sh  topology_benchmark_table.tex
assignment_2/benchmark_results/exchange_analysis/: exchange_analysis_results.csv
assignment_2/include/io/: AsciiWriter.hpp  FileManager.hpp  HDF5Writer.hpp  IterationRecorder.hpp
assignment_2/include/mpi/: MPIContext.hpp
assignment_2/include/poisson/: Config.hpp  Grid.hpp  Solver.hpp  SolverStrategies.hpp  SolverStrategy.hpp  Telemetry.hpp  Timer.hpp
assignment_2/src/io/: AsciiWriter.cpp  FileManager.cpp  HDF5Writer.cpp  IterationRecorder.cpp
assignment_2/src/mpi/: MPIContext.cpp
assignment_2/src/poisson/: Config.cpp  Grid.cpp  Solver.cpp  SolverStrategies.cpp  Timer.cpp
assignment_3/: GridDist  MPI_Fempois  MPI_Fempois.c
assignment_3/scripts/: analyze_adaptive.py  analyze_comm_volume.py  analyze_crossover.py  generate_crossover_plots.py  run_adaptive_experiments.py  run_crossover_experiments.py  run_experiments.py
assignment_4/: README.md  analysis_b.py  analysis_c.py  analysis_d.py  compile.sh  experiment_b.py  experiment_c.py  experiment_d.py  power_gpu.cu  run_power.sh
assignment_4/analysis_output/experiment_b/: experiment_b_summary.csv  experiment_b_table.tex
assignment_4/analysis_output/experiment_c/: experiment_c_analysis.txt  experiment_c_speedup.csv  experiment_c_table.tex
assignment_4/analysis_output/experiment_d/: experiment_d_explanation.txt  experiment_d_memory_comparison.csv  experiment_d_table.tex
assignment_4/results/experiment_b/: experiment_config.txt  job_n2000_b100.sh  job_n2000_b32.sh  job_n2000_b64.sh  job_n4000_b100.sh  job_n4000_b32.sh  job_n4000_b64.sh  job_n500_b100.sh  job_n500_b32.sh  job_n500_b64.sh  job_n50_b100.sh  job_n50_b32.sh  job_n50_b64.sh  run_n2000_b100_8996924.out  run_n2000_b32_8996922.out  run_n2000_b64_8996923.out  run_n4000_b100_8996927.out  run_n4000_b32_8996925.out  run_n4000_b64_8996926.out  (+6 more)
(+202 files in other folders)
